Working on tutorial-12

--- a/resources/public/login.html
+++ b/resources/public/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Script 2.2 - login.html -->
-    <form action="login.php" method="post" id="loginForm" novalidate>
+    <form method="post" id="loginForm" novalidate>
         <fieldset>
             <legend>Login</legend>
 
@@ -26,12 +26,12 @@
 
             <div>
               <label for="submit"></label>
-              <input type="submit" value="Login &rarr;" id="submit">
+              <input type="button" value="Login &rarr;" id="submit">
             </div>
 
         </fieldset>
     </form>
-    <script src="js/modern.js"></script>
+    <script src="js/modern_dbg.js"></script>
     <script>
       modern_cljs.login.init();
     </script>
