--- a/resources/public/login.html
+++ b/resources/public/login.html
@@ -26,12 +26,12 @@
 
             <div>
               <label for="submit"></label>
-              <input type="button" value="Login &rarr;" id="submit">
+              <input type="submit" value="Login &rarr;" id="submit">
             </div>
 
         </fieldset>
     </form>
-    <script src="js/modern_dbg.js"></script>
+    <script src="js/modern.js"></script>
     <script>
       modern_cljs.login.init();
     </script>
