readded script tags

--- a/resources/public/shopping-dbg.html
+++ b/resources/public/shopping-dbg.html
@@ -64,7 +64,10 @@
                value="Calculate"
                id="calc">
       </div>
-
+      <script src="js/modern_dbg.js"></script>
+      <script>
+        modern_cljs.shopping.init();
+      </script>
     </fieldset>
   </form>
 </body>
