--- a/resources/public/shopping-pre.html
+++ b/resources/public/shopping-pre.html
@@ -63,7 +63,10 @@
                value="Calculate"
                id="calc">
       </div>
-
+      <script src="js/modern_pre.js"></script>
+      <script>
+        modern_cljs.shopping.init();
+      </script>
     </fieldset>
   </form>
 </body>
