--- a/resources/public/shopping.html
+++ b/resources/public/shopping.html
@@ -21,7 +21,7 @@
                value="1"
                min="1" required>
       </div>
-      
+
       <div>
         <label for="price">Price Per Unit</label>
         <input type="text"
@@ -62,7 +62,10 @@
                value="Calculate"
                id="calc">
       </div>
-
+      <script src="js/modern.js"></script>
+      <script>
+        modern_cljs.shopping.init();
+      </script>
     </fieldset>
   </form>
 </body>
